# GOST-34112018-STREEBOG

./: CMakeLists.txt  LICENSE  LICENSE.BSD-3-Clause-No-Military-License  LICENSE.GPL-3.0-or-later  LICENSE.md  README.md
include/: gost34112018.h
licenses/: BSD-3-Clause-No-Military-License  GPL-3.0-or-later
optimized/: CMakeLists.txt
optimized/include/: gost34112018.h
optimized/src/lib/: gost34112018_optimized.c  gost34112018_optimized_precomp.h  gost34112018_optimized_private.h
optimized/src/test/: test.c
reference/: CMakeLists.txt  build.py  out.txt
reference/.cache/clangd/index/: gost34112018.c.1E4B9641A3AA4E33.idx  gost34112018.c.4768A236B796748C.idx  gost34112018.h.0A3BC5DC25BADF4D.idx  gost34112018.h.1B48C57A191A156A.idx  gost34112018_private.h.0106DABC324D3784.idx  gost34112018_private.h.F32CB06FEEB27794.idx  test.c.BE31AA5AFC5C9B4E.idx  test.c.F114D3CCF280630B.idx
reference/include/: gost34112018.h
reference/src/: gost34112018.c  gost34112018_private.h
reference/src/lib/: gost34112018.c  gost34112018_private.h
reference/src/test/: test.c
src/: gost34112018.c
src/lib/: gost34112018.c  gost34112018_common.c  gost34112018_common.h  gost34112018_interface.h  gost34112018_types.h  gost34112018_vec512.c  gost34112018_vec512.h
src/lib/avx2/: gost34112018_avx2.c  gost34112018_avx2_types.h  gost34112018_vec512_avx2.c
src/lib/clockwork/: clockwork.c  clockwork.h
src/lib/optimized/: gost34112018_optimized.c  gost34112018_optimized_precomp.h
src/lib/reference/: gost34112018_ref.c
src/test/: test.c
src/util/: gost34112018_cli.c
